--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "mysql": "^2.18.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
